--- a/projects/ui-lib/src/lib/components/page-error/page-error.component.scss
+++ b/projects/ui-lib/src/lib/components/page-error/page-error.component.scss
@@ -3,4 +3,13 @@
   height: 80%;
   font-size: 24px;
   flex-direction: column;
+
+  .centerer {
+    display: grid;
+    place-items: center;
+  }
+
+  .mt1 {
+    margin-top: 1rem;
+  }
 }
