--- a/projects/ui-lib/src/lib/components/page-state/page-state.component.scss
+++ b/projects/ui-lib/src/lib/components/page-state/page-state.component.scss
@@ -1,12 +1,12 @@
-.w-100 {
-  width: 100%;
-}
-
-.h-100 {
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100%;
-}
-
-.centerer {
-  display: grid;
-  place-items: center;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
 }
