--- a/projects/ui-lib/src/lib/components/table/table.component.html
+++ b/projects/ui-lib/src/lib/components/table/table.component.html
@@ -16,7 +16,7 @@
           <div class="flexer">
             {{heading}}
             <app-table-sort-header
-              *ngIf="config.sortable"
+              *ngIf="config.sortable && !config.draggable"
               class="ml05"
               [selected]="currentSortColumn === i"
               (click)="currentSortColumn = i"
@@ -26,20 +26,61 @@
         <th *ngIf="config.options.length > 0" class="table-heading-accent"></th>
       </tr>
     </thead>
-    <tbody>
+    <tbody cdkDropList (cdkDropListDropped)="drop($event)" *ngIf="config.draggable">
+      <tr
+        *ngFor="let obj of config.data; trackBy: trackById; index as i"
+        (mouseover)="hoverRowIndex = i"
+        (mouseleave)="hoverRowIndex = -1"
+        cdkDrag cdkDragLockAxis="y"
+        [ngClass]="{
+          'hover-row': hoverRowIndex == i && !config.draggable,
+          'selected-row': config.selectableRows && selectedRowIndex == i
+        }"
+        (click)="onRowClick(obj, i)"
+        @fadeInOut>
+        <td
+          *ngFor="let prop of config.dataProps; index as cellIndex">
+          <div class="data" [ngClass]="{ 'flexer': config.draggable && cellIndex === 0 }">
+            <mat-icon *ngIf="config.draggable && cellIndex === 0" class="ml05 draggable" cdkDragHandle>
+              drag_indicator
+            </mat-icon>
+            {{obj[prop] | blankFiller}}
+          </div>
+        </td>
+  
+        <td *ngIf="config.options.length > 0" class="right-align" (click)="$event.stopPropagation()">
+          <button mat-icon-button class="pointer dots right" [matMenuTriggerFor]="optionsMenu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #optionsMenu="matMenu">
+            <div *ngFor="let option of config.options"
+              mat-menu-item (click)="selectOption(option, obj, i)"
+              [ngClass]="{
+                'red': option == 'Remove' || option == 'Delete',
+              }">
+              {{option}}
+            </div>
+          </mat-menu>
+        </td>
+      </tr>
+    </tbody>
+
+    <tbody *ngIf="!config.draggable">
       <tr
         *ngFor="let obj of config.data; trackBy: trackById; index as i"
         (mouseover)="hoverRowIndex = i"
         (mouseleave)="hoverRowIndex = -1"
         [ngClass]="{
           'hover-row': hoverRowIndex == i,
-          'selected-row': config.selectableRows && selectedRowIndex == i,
+          'selected-row': config.selectableRows && selectedRowIndex == i
         }"
         (click)="onRowClick(obj, i)"
         @fadeInOut>
         <td
           *ngFor="let prop of config.dataProps; index as cellIndex">
-          <div class="data">{{obj[prop] | blankFiller}}</div>
+          <div class="data" [ngClass]="{ 'flexer': cellIndex === 0 }">
+            {{obj[prop] | blankFiller}}
+          </div>
         </td>
   
         <td *ngIf="config.options.length > 0" class="right-align" (click)="$event.stopPropagation()">
