--- a/projects/ui-lib/src/lib/components/table-sort-header/table-sort-header.component.html
+++ b/projects/ui-lib/src/lib/components/table-sort-header/table-sort-header.component.html
@@ -1,3 +1,3 @@
 <div class="sorting-container" (click)="onSortClick()">
-  <mat-icon [ngClass]="{'selected': selected && sortState != 'none', 'rotated': sortState == 'asc'}">sort</mat-icon>
+  <mat-icon [ngClass]="{'selected': selected() && sortState != 'none', 'rotated': sortState == 'asc'}">sort</mat-icon>
 </div>
