--- a/projects/ui-lib/src/lib/components/table/table.component.scss
+++ b/projects/ui-lib/src/lib/components/table/table.component.scss
@@ -97,6 +97,10 @@ td {
   cursor: grabbing;
 }
 
+.dragCol {
+  padding-left: 0 !important;
+}
+
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
