global loader service

--- a/projects/ui-lib/src/lib/components/global-loader/global-loader.component.html
+++ b/projects/ui-lib/src/lib/components/global-loader/global-loader.component.html
@@ -1,3 +1,5 @@
-<div class="loader">
-  <mat-spinner />
-</div>
+@if (loaderService.loading$ | async) {
+  <div class="loader">
+    <mat-spinner />
+  </div>
+}
