--- a/projects/ui-lib/src/lib/components/table/table.component.html
+++ b/projects/ui-lib/src/lib/components/table/table.component.html
@@ -4,7 +4,7 @@
   @if (config().withAdd) {
     <div class="flexer action" (click)="action.emit({action: 'add'})">
       <img ngSrc="assets/images/plus.svg" alt="+" width="20" height="20" priority="priority">
-      <div class="add">add</div>
+      <div class="ml05">add</div>
     </div>
   }
 </div>
