--- a/projects/ui-lib/src/lib/components/default-dialog/default-dialog.component.html
+++ b/projects/ui-lib/src/lib/components/default-dialog/default-dialog.component.html
@@ -1,17 +1,17 @@
 <div class="modal">
-  <div class="dialog-title pos-rel flex fs20 justify-content-center">
+  <div class="dialog-title">
     @if (withBack()) {
-      <div class="pointer mr05" (click)="back.emit()">
+      <div class="back-arrow" (click)="back.emit()">
         <mat-icon>keyboard_arrow_left</mat-icon>
       </div>
     }
     <h4 class="title">{{title()}}</h4>
-    <div class="pointer pos-abs closer" mat-dialog-close>
+    <div class="closer" mat-dialog-close>
       <mat-icon>close</mat-icon>
     </div>
   </div>
 
-  <div class="dialog-content flex-col align-items-center">
+  <div class="dialog-content">
     <ng-content select=".dialog-content"></ng-content>
     <ng-template #tempBody></ng-template>
     <ng-container *ngTemplateOutlet="temRef ? temRef: tempBody" />
