--- a/projects/ui-lib/src/lib/components/default-dialog/default-dialog.component.scss
+++ b/projects/ui-lib/src/lib/components/default-dialog/default-dialog.component.scss
@@ -7,9 +7,25 @@
   padding-inline: 2rem;
   padding-top: 1rem;
   margin-bottom: 1rem;
+  position: relative;
+  display: flex;
+  font-size: 20px;
+  justify-content: center;
+
+  .back-arrow {
+    cursor: pointer;
+    margin-right: 0.5rem;
+  }
+
+  .title {
+    font-weight: 700;
+    font-size: 24px;
+  }
 
   .closer {
     right: 3%;
+    position: absolute;
+    cursor: pointer;
   }
 }
 
@@ -18,4 +34,7 @@
   overflow-x: hidden;
   padding-bottom: 1rem;
   max-height: 65vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
