--- a/projects/ui-lib/src/lib/components/error-handler/error-popup/error-popup.component.scss
+++ b/projects/ui-lib/src/lib/components/error-handler/error-popup/error-popup.component.scss
@@ -8,7 +8,8 @@
     display: flex;
     margin-bottom: 0.5rem;
     font-weight: 600;
-    font-size: 0.5rem;
+    font-size: 18px;
+    gap: 0.5rem;
   }
 
   .error-info {
