changed app to lib on all components and directives

--- a/projects/ui-lib/src/lib/components/error-handler/error-popup/error-popup.component.html
+++ b/projects/ui-lib/src/lib/components/error-handler/error-popup/error-popup.component.html
@@ -1,4 +1,4 @@
-<app-default-dialog [title]="'Аn error has occurred'">
+<lib-default-dialog [title]="'Аn error has occurred'">
   <div class="dialog-content">
     <div class="status-info">
       <div>{{error.status}}</div>
@@ -6,7 +6,7 @@
     </div>
     <div class="error-info">
       <div>URL: {{error.url}}</div>
-      <app-error-dispaly [error]="error" />
+      <lib-error-dispaly [error]="error" />
     </div>
   </div>
-</app-default-dialog>
+</lib-default-dialog>
