--- a/projects/ui-lib/src/lib/components/error-handler/error-popup/error-popup.component.scss
+++ b/projects/ui-lib/src/lib/components/error-handler/error-popup/error-popup.component.scss
@@ -13,13 +13,7 @@
   }
 
   .error-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
-
-    .center {
-      text-align: center;
-    }
+    display: grid;
+    place-items: center;
   }
 }
