--- a/projects/ui-lib/src/lib/components/table/table.component.scss
+++ b/projects/ui-lib/src/lib/components/table/table.component.scss
@@ -39,7 +39,7 @@ table {
   font-size: 20px;
 }
 
-.selected-row {
+.selected-row td {
   background-color: #d3edf8;
 }
 
@@ -61,7 +61,6 @@ table {
 td, th {
   padding: 1rem;
   font-size: 14px;
-  color: #707070;
 }
 
 th {
