--- a/projects/ui-lib/src/lib/components/chip/chip.component.html
+++ b/projects/ui-lib/src/lib/components/chip/chip.component.html
@@ -1,3 +1,3 @@
-<div class="chip" [ngClass]="{'selected': isSelected()}" (click)="onClick()">
+<div class="chip" [class.selected]="isSelected()" (click)="onClick()">
   {{text()}}
 </div>
