adds responsivness to dialogs

--- a/projects/ui-lib/src/lib/components/default-dialog/default-dialog.component.html
+++ b/projects/ui-lib/src/lib/components/default-dialog/default-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="modal">
+<div class="modal" [style]="{'height': height()}">
   <div class="dialog-title">
     @if (withBack()) {
       <div class="back-arrow" (click)="back.emit()">
