--- a/projects/ui-lib/src/lib/components/default-dialog/default-dialog.component.scss
+++ b/projects/ui-lib/src/lib/components/default-dialog/default-dialog.component.scss
@@ -31,10 +31,10 @@
 }
 
 .dialog-content {
-  overflow-y: auto;
-  overflow-x: hidden;
+  flex: 1;
+  min-height: 0;
+  overflow: hidden;
   padding-bottom: 1rem;
-  max-height: 65vh;
   display: flex;
   flex-direction: column;
   align-items: center;
