--- a/projects/ui-lib/src/lib/components/table/table.component.scss
+++ b/projects/ui-lib/src/lib/components/table/table.component.scss
@@ -22,10 +22,13 @@ table {
 
 .action {
   color: #009ddc;
-  cursor: pointer;
   font-weight: 500;
   text-align: right;
   margin-left: auto;
+}
+
+.pointer {
+  cursor: pointer;
 }
 
 .gap05 {
