--- a/projects/ui-lib/src/lib/components/default-dialog/default-dialog.component.html
+++ b/projects/ui-lib/src/lib/components/default-dialog/default-dialog.component.html
@@ -5,7 +5,7 @@
         <mat-icon>keyboard_arrow_left</mat-icon>
       </div>
     }
-    <h4 class="title">{{title()}}</h4>
+    <h4 class="title">{{ dialogTitle() }}</h4>
     <div class="closer" mat-dialog-close>
       <mat-icon>close</mat-icon>
     </div>
