fixes error popup title

--- a/projects/ui-lib/src/lib/components/error-handler/error-popup/error-popup.component.html
+++ b/projects/ui-lib/src/lib/components/error-handler/error-popup/error-popup.component.html
@@ -1,4 +1,4 @@
-<lib-default-dialog [title]="'Аn error has occurred'">
+<lib-default-dialog [dialogTitle]="'Аn error has occurred'">
   <div class="dialog-content">
     <div class="status-info">
       <div>{{ error.status }}</div>
